--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-@import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&display=swap');
+
+@import "tailwindcss";
+
+@theme {
+  --font-sans: "Poppins", system-ui, sans-serif;
+}
