--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 
 @import "tailwindcss";
 
 @theme {
   --font-sans: "Poppins", system-ui, sans-serif;
+  --font-inter: "Inter",sans-serif;
 }
+
