--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap');
 
 
 @import "tailwindcss";
@@ -7,5 +8,6 @@
 @theme {
   --font-sans: "Poppins", system-ui, sans-serif;
   --font-inter: "Inter",sans-serif;
+  --font-fredoka: "Fredoka",serif
 }
 
